Plaid integration complete(tested)